Avoid white-space no-wrap for the author name in datatables

--- a/static/css/master.less
+++ b/static/css/master.less
@@ -6260,6 +6260,10 @@ table.history td.timestamp {
   white-space: nowrap;
 }
 
+table.history td.author {
+  padding: 10px;
+}
+
 table.history td.detail {
   padding: 10px;
   width: 100%;
